# commonware-bft-lab

./: Cargo.toml  README.ko.md  README.md  ai-cicd.config.json
.github/: pull_request_template.ko.md  pull_request_template.md
.github/workflows/: ai-ci.yml  ai-review.yml  benchmark.yml  ci.yml
docs/: README.ko.md  README.md  ai-cicd-cycle.ko.md  ai-cicd-cycle.md  bft-consensus-roadmap.ko.md  bft-consensus-roadmap.md  evaluation.ko.md  evaluation.md  milestones.ko.md  milestones.md  research.ko.md  research.md  visualization.ko.md  visualization.md
docs/adr/: 0001-commonware-simplex-bft.ko.md  0001-commonware-simplex-bft.md
examples/: decision-payload.json
scripts/: ai-quality-gates.mjs  verify-mermaid.mjs
src/: lib.rs  main.rs
