[package]
name = "commonware-bft-lab"
version = "0.1.0"
edition = "2024"
description = "Learning repo for Commonware Simplex BFT consensus over deterministic decision-log payloads"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
commonware-consensus = "2026.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
thiserror = "2.0.12"
